tools/tests/errors/surf_exc_10.experr
'C' object has no attribute '_exit_'
